test_regress/t/t_clocking_bad2.out
%Error: t/t_clocking_bad2.v:14:20: Multiple default input skews not allowed
   14 |     default input #2 output #2;
      |                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_clocking_bad2.v:14:30: Multiple default output skews not allowed
   14 |     default input #2 output #2;
      |                              ^
%Error: t/t_clocking_bad2.v:16:5: Multiple clockvars with the same name not allowed
   16 |     output out;
      |     ^~~~~~
%Error: Exiting due to
